--- a/ClearVision_v6.theme.css
+++ b/ClearVision_v6.theme.css
@@ -16,8 +16,8 @@
 /* SETTINGS */
 :root {
   /* ACCENT COLORS */
-  --main-color: #7eb99c; /* main accent color (hex, rgb or hsl) [default: #2780e6] */
-  --hover-color: #4c7072; /* hover accent color (hex, rgb or hsl) [default: #1e63b3] */
+  --main-color: #4c7072; /* main accent color (hex, rgb or hsl) [default: #2780e6] */
+  --hover-color: #7eb99c; /* hover accent color (hex, rgb or hsl) [default: #1e63b3] */
   --success-color: #43b581; /* success accent color (hex, rgb or hsl) [default: #43b581] */
   --danger-color: #982929; /* danger accent color (hex, rgb or hsl) [default: #982929] */
   --url-color: var(--main-color); /*The color of url links [default: var(--main-color)]*/
